defconfig: Enable alucard and Start our version

--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -47,7 +47,7 @@ CONFIG_HZ_300=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-benschholds-custom-kernel-v3.4"
+CONFIG_LOCALVERSION="_saki-op2-kernel-v1.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -448,6 +448,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_BARRY_ALLEN=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
